substrate/frame/election-provider-support/solution-type/tests/ui/fail/missing_accuracy.stderr
error: Expected binding: `Accuracy = ...`
  --> tests/ui/fail/missing_accuracy.rs:23:2
   |
23 |     Perbill,
   |     ^^^^^^^
